--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -26,6 +26,11 @@ spring:
             - Path=/api/dev/task/**
           filters:
             - RewritePath=/api/dev/task/(?<segment>.*),/$\{segment}
+  sleuth:
+    sampler:
+      probability: 1
+    zipkin:
+      base-url: http://host.docker.internal:9411
 
 server:
   port: 8762
