--- a/project-service/pom.xml
+++ b/project-service/pom.xml
@@ -21,6 +21,14 @@
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.cydeo</groupId>
             <artifactId>app-domain-model</artifactId>
         </dependency>
